kubernetes/apps/weave-gitops/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weave-gitops-ingress
  namespace: weave-gitops
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: "weave-gitops.edward.sydney"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: weave-gitops
                port:
                  number: 9001
    - host: "weave-gitops.cluster.local"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: weave-gitops
                port:
                  number: 9001
